--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -1,5 +1,5 @@
 label {
-  font-size: .8em;
+  font-size: .9em;
   display: block;
   margin-bottom: space(1);
 }
@@ -8,9 +8,31 @@ input {
   display: block;
   width: 100%;
   height: 40px;
+  padding: space(1);
   border: 1px solid $black;
+  border-radius: 4px;
   background: transparent;
-  color: $white;
+  color: $black;
   font-family: $font;
+  font-weight: 600;
   margin-bottom: space(2);
+
+  &:focus {
+    border: 1px solid lighten($black, 10%);
+    outline: 1px solid lighten($black, 10%);
+  }
+
+}
+
+input::placeholder {
+  color: $black;
+  opacity: 1;
+}
+
+input:-ms-input-placeholder {
+  color: $black;
+}
+
+input::-ms-input-placeholder {
+  color: $black;
 }
