--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,18 +8,18 @@
 
 
       <div class="tabs">
-        <a href="#" class="btn" [ngClass]="{'btn-border' : !this.login}" (click)="showConnexion()">Connexion</a>
-        <a href="#" class="btn" [ngClass]="{'btn-border' : this.login}" (click)="showInscription()">Inscription</a>
+        <button class="btn" [ngClass]="{'btn-border' : !this.tabs}" (click)="showConnexion()">Connexion</button>
+        <button class="btn" [ngClass]="{'btn-border' : this.tabs}" (click)="showInscription()">Inscription</button>
       </div>
 
-      <div class="connexion" *ngIf="this.login">
-        <form action="">
+      <div class="connexion" *ngIf="this.tabs">
+        <form [formGroup]="loginForm" (ngSubmit)="login()">
 
         <label for="username">Votre nom d'utilisateur</label>
-        <input type="username" id="username" placeholder="Nom d'utilisateur">
+        <input type="username" id="username" placeholder="Nom d'utilisateur" formControlName="username">
 
         <label for="password" class="password">Votre mot de passe</label>
-        <input type="password" id="password" placeholder="Mot de passe">
+        <input type="password" id="password" placeholder="Mot de passe" formControlName="password">
 
         <div class="submit">
           <button type="submit" class="btn btn-submit">Se connecter</button>
@@ -28,7 +28,7 @@
         </form>
       </div>
 
-      <div class="inscription" *ngIf="!this.login">
+      <div class="inscription" *ngIf="!this.tabs">
         <form action="">
 
           <label for="username">Votre nom d'utilisateur</label>
