--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -29,16 +29,19 @@
       </div>
 
       <div class="inscription" *ngIf="!this.tabs">
-        <form action="">
+        <form [formGroup]="registerForm" (ngSubmit)="register()">
+
+          <label for="email">Votre adresse mail</label>
+          <input type="email" id="email" placeholder="Adresse mail" formControlName="email">
 
           <label for="username">Votre nom d'utilisateur</label>
-          <input type="username" id="username" placeholder="Nom d'utilisateur">
+          <input type="username" id="username" placeholder="Nom d'utilisateur" formControlName="username">
 
           <label for="password" class="password">Votre mot de passe</label>
-          <input type="password" id="password" placeholder="Mot de passe">
+          <input type="password" id="password" placeholder="Mot de passe" formControlName="password">
 
           <label for="password" class="password">Confirmez votre mot de passe</label>
-          <input type="password" id="passwordConfirmed" placeholder="Mot de passe (confirmation)">
+          <input type="password" id="passwordConfirmed" placeholder="Mot de passe (confirmation)" formControlName="passwordConfirmed">
 
           <div class="submit">
             <button type="submit" class="btn btn-submit">S'inscrire</button>
