--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: calc(100vh - 192px);
+  min-height: calc(100vh - 192px);
   overflow: hidden;
 
   h1 {
@@ -26,28 +26,30 @@
     border: 2px solid $black;
     border-radius: 4px;
   }
-}
 
-.connexion {
-  width: 100%;
-}
+  .connexion {
+    width: 100%;
+  }
 
-.inscription {
-  width: 100%;
-}
+  .inscription {
+    width: 100%;
+  }
 
-.tabs {
-  max-width: 500px;
-  margin-bottom: space(5);
+  .tabs {
+    max-width: 500px;
+    margin-bottom: space(5);
 
-  button:first-of-type {
-    margin-right: space(2);
+    button:first-of-type {
+      margin-right: space(2);
+    }
+  }
+
+  .submit {
+    display: flex;
+    justify-content: center;
+    margin-top: space(6);
   }
 }
 
-.submit {
-  display: flex;
-  justify-content: center;
-  margin-top: space(6);
-}
+
 
