fix redirect login

--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -17,11 +17,11 @@
   <div class="right">
 
     <div class="is-login" *ngIf="false">
-      <a href="" class="btn">Se déconnecter</a>
+      <a routerLink="/" class="btn">Se déconnecter</a>
     </div>
 
     <div class="not-login">
-      <a href="" class="btn">Se connecter</a>
+      <a routerLink="/login" class="btn">Se connecter</a>
     </div>
 
   </div>
