--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -42,6 +42,8 @@
           <label for="password" class="password">Confirmez votre mot de passe</label>
           <input type="password" id="passwordConfirmed" placeholder="Mot de passe (confirmation)" formControlName="passwordConfirmed">
 
+          <p class="error">{{errorMessage}}</p>
+
           <div class="submit">
             <button type="submit" class="btn btn-submit">S'inscrire</button>
           </div>
