--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  min-width: 100%;
   min-height: calc(100vh - 192px);
   overflow: hidden;
 
@@ -44,10 +44,15 @@
     }
   }
 
+  p {
+    display: flex;
+    justify-content: center;
+  }
+
   .submit {
     display: flex;
     justify-content: center;
-    margin-top: space(6);
+    margin-top: space(4);
   }
 }
 
