--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -36,3 +36,30 @@ input:-ms-input-placeholder {
 input::-ms-input-placeholder {
   color: $black;
 }
+
+select {
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding: space(1);
+  border: 1px solid $black;
+  border-radius: 4px;
+  background: transparent;
+  color: $black;
+  font-family: $font;
+  font-weight: 600;
+  margin-bottom: space(2);
+
+  &:focus {
+    border: 1px solid lighten($black, 10%);
+    outline: 1px solid lighten($black, 10%);
+  }
+}
+
+option {
+  background: transparent !important;
+  color: $black !important;
+  font-family: $font;
+  font-weight: 400;
+}
+
