--- a/src/app/pages/recette/single-recette/single-recette.component.html
+++ b/src/app/pages/recette/single-recette/single-recette.component.html
@@ -24,7 +24,7 @@
         <div class="difficulty-recette">
           <i class="ri-trophy-line"></i>
           <div class="difficulty-recette-text">
-            <span id="difficulty-recette-text-responsive">Difficulté : </span><span>{{ recette.difficulty }}</span>
+            <span id="difficulty-recette-text-responsive">Difficulté : </span><span> {{ recette.difficulty }} </span>
           </div>
         </div>
       </div>
@@ -37,8 +37,7 @@
         <h2>Ingrédients</h2>
       </div>
       <div class="ingredients-content">
-        <span>Sucre</span>
-        <span>Chocolat</span>
+        <div class="ingredient-list" *ngFor="let ingredient of ingredients"> {{ ingredient.name }} </div>
       </div>
     </div>
 
@@ -47,8 +46,9 @@
         <h2>Préparation</h2>
       </div>
       <div class="preparation-content">
-        <span>1. Ajouter le sucre</span>
-        <span>2. Ajouter le chocolat</span>
+        <div class="preparation-list" *ngFor="let preparation of preparations; let index = index">
+          <span id="preparation-list-number"> {{ index + 1 }}. </span> <span id="preparation-list-text"> {{ preparation }} </span>
+        </div>
       </div>
     </div>
   </div>
