--- a/src/app/pages/recette/single-recette/single-recette.component.scss
+++ b/src/app/pages/recette/single-recette/single-recette.component.scss
@@ -10,6 +10,7 @@
 .description-recette {
   display: flex;
   min-width: 100%;
+  min-height: 100%;
   padding: space(3);
   margin-top: space(4);
   padding-bottom: space(6);
@@ -29,7 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: calc(100% - 448px);
+    min-width: calc(100% - 424px);
 
     .header-recette {
       font-size: 2.5em;
@@ -42,7 +43,7 @@
       justify-content: space-evenly;
       align-items: center;
       min-height: 100%;
-      font-size: 1.2em;
+      font-size: 1.3em;
 
       .time-recette {
         display: flex;
@@ -90,7 +91,7 @@
   .ingredients-recette {
     display: flex;
     flex-direction: column;
-    width: 40%;
+    min-width: 40%;
     min-height: 100%;
     border-right: 4px solid $black;
 
@@ -98,7 +99,7 @@
       display: flex;
       justify-content: center;
       font-weight: 900;
-      font-size: 1.4em;
+      font-size: 1.5em;
     }
 
     .ingredients-content {
@@ -107,7 +108,7 @@
       align-items: center;
       gap: space(2);
       padding-top: space(4);
-      font-size: 1.1em;
+      font-size: 1.3em;
       font-weight: 600;
     }
   }
@@ -131,9 +132,116 @@
       align-items: center;
       gap: space(2);
       margin-top: space(4);
-      font-size: 1.1em;
+      font-size: 1.3em;
       font-weight: 600;
+
+      .preparation-list {
+        display: flex;
+        align-items: center;
+        gap: space(2);
+
+        #preparation-list-number {
+          font-weight: 900;
+        }
+      }
     }
   }
 }
+
+@media screen and (max-width: $xl) {
+  .description-recette {
+    .content-recette {
+
+      .header-recette {
+        font-size: 2.4em;
+        font-weight: 900;
+      }
+
+      .informations-recette {
+
+        .time-recette {
+          gap: space(1);
+
+          .time-recette-text #time-recette-text-responsive {
+            display: none;
+          }
+        }
+
+        .people-recette {
+          gap: space(1);
+
+          .people-recette-text #people-recette-text-responsive {
+            display: none;
+          }
+        }
+
+        .difficulty-recette {
+          gap: space(1);
+
+          .difficulty-recette-text #difficulty-recette-text-responsive {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $l) {
+  .description-recette {
+    flex-direction: column;
+    align-items: center;
+    gap: space(4);
+
+    .content-recette {
+      gap: space(3);
+
+      .informations-recette {
+        gap: space(2);
+      }
+    }
+  }
+
+  .details-recette {
+    flex-direction: column;
+    align-items: center;
+    gap: space(4);
+
+    .ingredients-recette {
+      min-width: 100%;
+      min-height: 100%;
+      border-right: none;
+      border-bottom: 4px solid $black;
+      padding-bottom: space(4);
+    }
+
+    .preparation-recette {
+      min-width: 100%;
+      min-height: 100%;
+      padding-bottom: space(4);
+    }
+  }
+}
+
+  @media screen and(max-width: $m) {
+    .description-recette {
+      .img-recette {
+        img {
+          width: 300px;
+          height: 201px;
+        }
+      }
+    }
+  }
+
+  @media screen and(max-width: $s) {
+    .description-recette {
+      .img-recette {
+        img {
+          width: 200px;
+          height: 134px;
+        }
+      }
+    }
+  }
 
