--- a/src/app/templates/header/header.component.scss
+++ b/src/app/templates/header/header.component.scss
@@ -2,55 +2,102 @@
 
 header {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  min-height: 100%;
 }
 
-.left {
+.header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  min-height: 100%;
 
-  .logo {
-    margin-right: space(8);
+  .left {
+    display: flex;
+    align-items: center;
 
-    img {
-    max-width: 128px;
+    .logo {
+      margin-right: space(8);
+
+      img {
+      max-width: 128px;
+      }
+    }
+
+    nav {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .nav-smallWidth {
+        display: none;
+
+        label {
+          display: none;
+        }
+
+        #toggle {
+          display: none;
+        }
+
+        .linkSmallWidth {
+          display: none;
+        }
+      }
+
+      .nav-fullWidth {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      a {
+        font-size: 18px;
+        margin-right: space(4);
+
+        &:last-of-type {
+          margin-right: 0;
+        }
+
+        &:after {
+          content: '';
+          display: block;
+          width: 0px;
+          height: 4px;
+          background-color: $white;
+          margin-top: space(.5);
+          transition: width .4s;
+        }
+
+        &:hover {
+          &::after {
+            width: 100%;
+          }
+        }
+      }
     }
   }
 
-  nav {
+  .right {
     display: flex;
     align-items: center;
-    justify-content: center;
+  }
+}
 
-    .nav-smallWidth {
-      display: none;
+.headerMenuMobile {
+  display: flex;
+  justify-content: center;
+  min-width: 100%;
+  min-height: 100%;
+  padding-top: space(3);
 
-      label {
-        display: none;
-      }
-
-      #toggle {
-        display: none;
-      }
-
-      .linkSmallWidth {
-        display: none;
-      }
-    }
-
-    .nav-fullWidth {
-      display: flex;
-      justify-content: space-between;
-    }
+  .linkSmallWidth {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    min-width: 100%;
 
     a {
       font-size: 18px;
-      margin-right: space(4);
-
-      &:last-of-type {
-        margin-right: 0;
-      }
 
       &:after {
         content: '';
@@ -71,52 +118,54 @@ header {
   }
 }
 
-.right {
-  display: flex;
-  align-items: center;
-}
 
 @media screen and (max-width: $l) {
-  .left {
-    min-width: calc(100% - 122.3px - 16px);
+  .header {
+    .left {
+      min-width: calc(100% - 122.3px - 16px);
 
-    .logo {
-      margin-right: 0;
-    }
-
-    nav {
-      height: 60px;
-      width: 100%;
-
-      .nav-smallWidth {
-        display: flex;
-        flex-direction: column;
-
-        label {
-          width: 30px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          margin: 0 auto;
-          font-size: 2em;
-          font-weight: 900;
-          color: $black;
-          cursor: pointer;
-        }
-
-        #toggle:checked + .linkSmallWidth {
-          display: block;
-        }
-
+      .logo {
+        margin-right: 0;
       }
 
-      .nav-fullWidth {
-        display: none;
-        flex-direction: column;
-        background: transparent;
-        height: 220px;
+      nav {
+        display: flex;
+        align-items: center;
+        height: 60px;
+        width: 100%;
+
+        .nav-smallWidth {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          margin-top: 20px;
+          width: 100%;
+          height: 100%;
+          gap: space(2);
+
+          label {
+            width: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto;
+            font-size: 2em;
+            font-weight: 900;
+            color: $black;
+            cursor: pointer;
+          }
+
+        }
+
+        .nav-fullWidth {
+          display: none;
+          flex-direction: column;
+          background: transparent;
+          height: 220px;
+        }
       }
     }
   }
+
 
 }
