--- a/src/app/templates/header/header.component.scss
+++ b/src/app/templates/header/header.component.scss
@@ -34,10 +34,7 @@ header {
 
         label {
           display: none;
-        }
-
-        #toggle {
-          display: none;
+          margin-bottom: 0;
         }
 
         .linkSmallWidth {
@@ -83,41 +80,6 @@ header {
   }
 }
 
-.headerMenuMobile {
-  display: flex;
-  justify-content: center;
-  min-width: 100%;
-  min-height: 100%;
-  padding-top: space(3);
-
-  .linkSmallWidth {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    min-width: 100%;
-
-    a {
-      font-size: 18px;
-
-      &:after {
-        content: '';
-        display: block;
-        width: 0px;
-        height: 4px;
-        background-color: $white;
-        margin-top: space(.5);
-        transition: width .4s;
-      }
-
-      &:hover {
-        &::after {
-          width: 100%;
-        }
-      }
-    }
-  }
-}
-
 
 @media screen and (max-width: $l) {
   .header {
@@ -138,17 +100,16 @@ header {
           display: flex;
           flex-direction: column;
           align-items: center;
-          margin-top: 20px;
+          justify-content: center;
           width: 100%;
-          height: 100%;
-          gap: space(2);
+          height: calc(100% + 10px);
 
           label {
-            width: 30px;
+            width: 80px;
+            height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 0 auto;
             font-size: 2em;
             font-weight: 900;
             color: $black;
@@ -157,12 +118,97 @@ header {
 
         }
 
+        .nav-smallWidth-selected {
+
+          label {
+            background-color: $black;
+            color: $white;
+            border: 2px solid $white;
+            border-bottom: 0;
+            border-radius: 5px;
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+          }
+        }
+
         .nav-fullWidth {
           display: none;
           flex-direction: column;
           background: transparent;
           height: 220px;
         }
+      }
+    }
+  }
+
+  .headerMenuMobile {
+    display: flex;
+    justify-content: center;
+    min-width: 100%;
+    min-height: 100%;
+
+    .linkSmallWidth {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      min-width: 100%;
+
+      a {
+        font-size: 18px;
+
+        &:after {
+          content: '';
+          display: block;
+          width: 0px;
+          height: 4px;
+          background-color: $white;
+          margin-top: space(.5);
+          transition: width .4s;
+        }
+
+        &:hover {
+          &::after {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+
+  .headerMenuMobileSelected {
+    position: relative;
+    background-color: $black;
+    padding: space(2) 0;
+    padding-bottom: space(1);
+    border: 2px solid $white;
+    border-top: 0;
+    border-radius: 5px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+
+    &:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 1px;
+      width: calc((100% / 2) - 40px);
+      border-top: 2px solid $white;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      right: 0;
+      top: 0;
+      height: 1px;
+      width: calc((100% / 2) - 40px);
+      border-top: 2px solid $white;
+    }
+
+    .linkSmallWidth {
+      a {
+        color: $white;
       }
     }
   }
