add error 404 page

--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -28,3 +28,11 @@
     border: 1px solid $black;
   }
 }
+
+.btn-icon {
+  i {
+    font-size: 1em;
+    padding-top: space(0.25);
+    padding-right: space(2);
+  }
+}
