color change menu mobil

--- a/src/app/pages/recette/create-recette/create-recette.component.html
+++ b/src/app/pages/recette/create-recette/create-recette.component.html
@@ -27,4 +27,20 @@
       </div>
     </div>
   </div>
+
+  <div class="create-recette-informations">
+    <div class="create-recette-informations-headings">
+      <h2>Informations sur la recette</h2>
+    </div>
+    <div class="create-recette-informations-content">
+
+      <div class="temps-preparation">
+        <label for="tps-preparation">Temps de préparation :</label>
+        <input type="text" id="tps-preparation" placeholder="Temps de préparation" formControlName="tps-preparation">
+      </div>
+
+
+    </div>
+  </div>
+
 </div>
