--- a/src/app/pages/recette/create-recette/create-recette.component.scss
+++ b/src/app/pages/recette/create-recette/create-recette.component.scss
@@ -17,6 +17,7 @@
   display: flex;
   justify-content: space-evenly;
   min-height: 100%;
+  padding-top: space(4);
 
   .create-recette-header-left {
     display: flex;
@@ -25,8 +26,8 @@
   }
 
   .create-recette-header-right {
-    min-width: 40%;
-    min-height: 40vh;
+    width: 400px;
+    height: 268px;
 
     .img {
       width: 100%;
@@ -45,11 +46,47 @@
         height: 100%;
 
         img {
-          max-width: 100%;
-          height: auto;
+          width: 100%;
+          height: 100%;
         }
       }
 
+    }
+  }
+}
+
+.create-recette-informations {
+  display: flex;
+  flex-direction: column;
+  gap: space(4);
+  padding: space(6) space(2);
+
+  .create-recette-informations-headings {
+    display: flex;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 1.5em;
+  }
+
+  .create-recette-informations-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: space(2);
+
+    .temps-preparation {
+      width: calc(50% - 8px);
+      display: flex;
+      align-items: center;
+
+      label {
+        margin-bottom: 0px;
+        min-width: 150px;
+      }
+
+      input {
+        margin-bottom: 0px;
+      }
     }
   }
 }
