--- a/src/app/templates/header/header.component.scss
+++ b/src/app/templates/header/header.component.scss
@@ -123,9 +123,9 @@ header {
         .nav-smallWidth-selected {
 
           label {
-            background-color: $black;
-            color: $white;
-            border: 2px solid $white;
+            background-color: lighten($orange, 4%);
+            color: $black;
+            border: 2px solid $black;
             border-bottom: 0;
             border-radius: 5px;
             border-bottom-left-radius: 0;
@@ -178,17 +178,17 @@ header {
   }
 
   .headerMenuMobileSelected {
-    background-color: $black;
+    background-color: lighten($orange, 4%);
     padding: space(2) 0;
     padding-bottom: space(1);
-    border: 2px solid $white;
+    border: 2px solid $black;
     border-radius: 5px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 
     .linkSmallWidth {
       a {
-        color: $white;
+        color: $black;
       }
     }
   }
