add recette_cooking attribute

--- a/src/app/pages/recette/all-recette/all-recette.component.html
+++ b/src/app/pages/recette/all-recette/all-recette.component.html
@@ -30,7 +30,7 @@
           <div class="time-recette">
             <i class="ri-time-line"></i>
             <div class="time-recette-text">
-              <span id="time-recette-text-responsive">Temps de préparation :</span><span> {{ recette.time }} min </span>
+              <span id="time-recette-text-responsive">Temps de préparation :</span><span> {{ recette.time_preparation }} min </span>
             </div>
           </div>
           <div class="people-recette">
