--- a/src/app/pages/recette/single-recette/single-recette.component.scss
+++ b/src/app/pages/recette/single-recette/single-recette.component.scss
@@ -42,10 +42,21 @@
       flex-direction: column;
       justify-content: space-evenly;
       align-items: center;
-      min-height: 100%;
-      font-size: 1.3em;
+      min-height: calc(100% - 40px);
+      font-size: 1.2em;
 
-      .time-recette {
+      .time-preparation-recette {
+        display: flex;
+        align-items: center;
+        gap: space(2);
+
+        i {
+          font-weight: 400;
+          font-size: 1.4em;
+        }
+      }
+
+      .time-cooking-recette {
         display: flex;
         align-items: center;
         gap: space(2);
@@ -108,7 +119,7 @@
       align-items: center;
       gap: space(2);
       padding-top: space(4);
-      font-size: 1.3em;
+      font-size: 1.2em;
       font-weight: 600;
     }
   }
@@ -123,7 +134,7 @@
       display: flex;
       justify-content: center;
       font-weight: 900;
-      font-size: 1.4em;
+      font-size: 1.5em;
     }
 
     .preparation-content {
@@ -132,7 +143,7 @@
       align-items: center;
       gap: space(2);
       margin-top: space(4);
-      font-size: 1.3em;
+      font-size: 1.2em;
       font-weight: 600;
 
       .preparation-list {
@@ -152,17 +163,20 @@
   .description-recette {
     .content-recette {
 
-      .header-recette {
-        font-size: 2.4em;
-        font-weight: 900;
-      }
-
       .informations-recette {
 
-        .time-recette {
+        .time-preparation-recette {
           gap: space(1);
 
-          .time-recette-text #time-recette-text-responsive {
+          .time-preparation-recette-text #time-preparation-recette-text-responsive {
+            display: none;
+          }
+        }
+
+        .time-cooking-recette {
+          gap: space(1);
+
+          .time-cooking-recette-text #time-cooking-recette-text-responsive {
             display: none;
           }
         }
