--- a/src/assets/scss/components/_buttons.scss
+++ b/src/assets/scss/components/_buttons.scss
@@ -24,7 +24,7 @@
   background: transparent;
 
   &:hover {
-    background: $white;
+    background: lighten(gray, 40%);
     border: 1px solid $black;
   }
 }
