--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,9 +22,7 @@
 
 //BODY
 body {
-  background-image: url('./assets/images/background_orange_faded.png');
-  background-size: cover;
-  background-attachment: fixed;
+  background-color: #FBCC97;
   min-height: 100vh;
   width: 100%;
   color: $black;
