--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -25,17 +25,17 @@ input {
 }
 
 input::placeholder {
-  color: $black;
-  opacity: 1;
+  //color: $black;
+  opacity: 0.6;
 }
 
-input:-ms-input-placeholder {
-  color: $black;
-}
+//input:-ms-input-placeholder {
+  //color: $black;
+//}
 
-input::-ms-input-placeholder {
-  color: $black;
-}
+//input::-ms-input-placeholder {
+  //color: $black;
+//}
 
 select {
   display: block;
