add directive digitonly, add number_people for recette and beginning method add recette with formControl

--- a/src/app/pages/recette/create-recette/create-recette.component.html
+++ b/src/app/pages/recette/create-recette/create-recette.component.html
@@ -1,4 +1,4 @@
-<div class="create-recette">
+<form [formGroup]="recetteForm" class="create-recette" (ngSubmit)="submit()">
 
   <div class="create-recette-title">
     <h1>Créer une recette</h1>
@@ -7,10 +7,10 @@
   <div class="create-recette-header">
     <div class="create-recette-header-left">
       <div class="input-name">
-        <input type="text" id="name" placeholder="Nom de la recette">
+        <input type="text" id="name" placeholder="Nom de la recette" formControlName="name">
       </div>
       <div class="category">
-        <select name="categories" id="categories-select" [(ngModel)]="this.categoryRecette">
+        <select name="categories" id="categories-select" [(ngModel)]="this.categoryRecette" [ngModelOptions]="{standalone: true}">
           <option>Choisir une catégorie</option>
           <option *ngFor="let category of categories">
             {{ category.name }}
@@ -18,7 +18,7 @@
         </select>
       </div>
       <div class="difficulty">
-        <select name="difficulties" id="difficulties-select" [(ngModel)]="this.difficultyRecette">
+        <select name="difficulties" id="difficulties-select" [(ngModel)]="this.difficultyRecette" [ngModelOptions]="{standalone: true}">
           <option>Choisir une difficulté</option>
           <option *ngFor="let difficulty of difficulties">
             {{ difficulty }}
@@ -27,7 +27,7 @@
       </div>
       <div class="people">
         <label for="people-label">Nombre de personnes :</label>
-        <input type="text" id="number-people" maxlength="2" pattern="\d*">
+        <input type="text" id="number-people" maxlength="2" inputmode="numeric" pattern="[0-9]*" digitOnly formControlName="numberPeople">
       </div>
     </div>
     <div class="create-recette-header-right">
@@ -58,9 +58,9 @@
           <div class="temps-preparation">
             <label for="tps-preparation-label">Temps de préparation :</label>
             <div class="tps-preparation">
-              <input type="text" id="tps-preparation-heure" placeholder="00" maxlength="2" pattern="\d*">
+              <input type="text" id="tps-preparation-heure" placeholder="00" maxlength="2" inputmode="numeric" pattern="[0-9]*" digitOnly formControlName="timePreparationHour">
               <span>heure(s)</span>
-              <input type="text" id="tps-preparation-min" placeholder="00" maxlength="2" pattern="\d*">
+              <input type="text" id="tps-preparation-min" placeholder="00" maxlength="2" inputmode="numeric" pattern="[0-9]*" digitOnly formControlName="timePreparationMin">
               <span>minute(s)</span>
             </div>
           </div>
@@ -68,9 +68,9 @@
           <div class="temps-cuisson">
             <label for="tps-cuisson-label">Temps de cuisson :</label>
             <div class="tps-cuisson">
-              <input type="text" id="tps-cuisson-heure" placeholder="00" maxlength="2" pattern="\d*">
+              <input type="text" id="tps-cuisson-heure" placeholder="00" maxlength="2" inputmode="numeric" pattern="[0-9]*" digitOnly formControlName="timeCookingHour">
               <span>heure(s)</span>
-              <input type="text" id="tps-cuisson-min" placeholder="00" maxlength="2" pattern="\d*">
+              <input type="text" id="tps-cuisson-min" placeholder="00" maxlength="2" inputmode="numeric" pattern="[0-9]*" digitOnly formControlName="timeCookingMin">
               <span>minute(s)</span>
             </div>
           </div>
@@ -92,7 +92,7 @@
             </div>
           </div>
           <div class="ingredients-add">
-            <input type="text" id="ingredients-add-input" placeholder="Ingrédient" [(ngModel)]="this.ingredient">
+            <input type="text" id="ingredients-add-input" name="ingredients-add-input" placeholder="Ingrédient" [(ngModel)]="this.ingredient" [ngModelOptions]="{standalone: true}">
             <button class="btn" (click)="addIngredient()">
               <i class="ri-add-line"></i>
             </button>
@@ -122,7 +122,7 @@
           </div>
           <div class="preparations-add">
             <span> {{ getNumeroPreparation() }}.</span>
-            <input type="text" id="preparations-add-input" placeholder="Préparation" [(ngModel)]="this.preparation">
+            <input type="text" id="preparations-add-input" name="preparations-add-input" placeholder="Préparation" [(ngModel)]="this.preparation" [ngModelOptions]="{standalone: true}">
             <button class="btn btn-add" (click)="addPreparation()">
               <i class="ri-add-line"></i>
             </button>
@@ -133,9 +133,9 @@
     </div>
 
     <div class="create-recette-submit">
-      <button class="btn btn-submit" (click)="submit()">Créer la recette</button>
+      <button class="btn btn-submit">Créer la recette</button>
     </div>
   </div>
 
-</div>
+</form>
 
